K/kubedb-webhook-server-5nmRaggTE/kubedb-webhook-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubedb-webhook-server
  namespace: 5nmRaggTE
  labels:
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: operator
      port: 443
      targetPort: operator
  selector:
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubedb-webhook-server
  namespace: 5nmRaggTE
  labels:
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubedb-webhook-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubedb-webhook-server
        app.kubernetes.io/instance: release-name
      annotations:
        reload: HUmDRxQJ
    spec:
      serviceAccountName: release-name-kubedb-webhook-server
      containers:
        - name: operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          image: kubedb/kubedb-webhook-server:v0.3.0
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --v=3
            - --secure-port=8443
            - --audit-log-path=-
            - --tls-cert-file=/var/serving-cert/tls.crt
            - --tls-private-key-file=/var/serving-cert/tls.key
            - --enable-mutating-webhook=true
            - --enable-validating-webhook=true
            - --use-kubeapiserver-fqdn-for-aks=true
          ports:
            - name: operator
              containerPort: 8443
          volumeMounts:
            - mountPath: /tmp
              name: tmpdir
            - mountPath: /var/serving-cert
              name: serving-cert
          resources:
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: tmpdir
          emptyDir: {}
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: release-name-kubedb-webhook-server-apiserver-cert
      securityContext: {}
      nodeSelector:
        kubernetes.io/os: linux
---
null
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.autoscaling.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-autoscaler
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mongodbautoscalerwebhook.mutators.autoscaling.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mongodbautoscalerwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - autoscaling.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbautoscalers
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: elasticsearchautoscalerwebhook.mutators.autoscaling.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/elasticsearchautoscalerwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - autoscaling.kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearchautoscalers
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mariadbautoscalerwebhook.mutators.autoscaling.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mariadbautoscalerwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - autoscaling.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mariadbautoscalers
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.dashboard.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-dashboard
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: elasticsearchdashboardwebhook.mutators.dashboard.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.dashboard.kubedb.com/v1alpha1/elasticsearchdashboardwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - dashboard.kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearchdashboards
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.ops.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-ops-manager
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mysqlopsrequestwebhook.mutators.ops.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.ops.kubedb.com/v1alpha1/mysqlopsrequestwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ops.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqlopsrequests
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-provisioner
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: elasticsearchwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/elasticsearchwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearches
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: postgreswebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/postgreswebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - postgreses
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mysqlwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/mysqlwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqls
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: perconaxtradbwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/perconaxtradbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - perconaxtradbs
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mongodbwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/mongodbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbs
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: rediswebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/rediswebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - redises
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: redissentinelwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/redissentinelwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - redissentinels
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: memcachedwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/memcachedwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - memcacheds
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: etcdwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/etcdwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - etcds
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: pgbouncerwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/pgbouncerwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - pgbouncers
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: proxysqlwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/proxysqlwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - proxysqls
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mariadbwebhook.mutators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.kubedb.com/v1alpha1/mariadbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mariadbs
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.schema.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-schema-manager
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mysqldatabasewebhook.mutators.schema.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.schema.kubedb.com/v1alpha1/mysqldatabasewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - schema.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqldatabases
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mongodbdatabasewebhook.mutators.schema.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.schema.kubedb.com/v1alpha1/mongodbdatabasewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - schema.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbdatabases
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.dashboard.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-dashboard
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: elasticsearchdashboardwebhook.validators.dashboard.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.dashboard.kubedb.com/v1alpha1/elasticsearchdashboardwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - dashboard.kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearchdashboards
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.ops.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-ops-manager
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mysqlopsrequestwebhook.validators.ops.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.ops.kubedb.com/v1alpha1/mysqlopsrequestwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ops.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqlopsrequests
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mongodbopsrequestwebhook.validators.ops.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.ops.kubedb.com/v1alpha1/mongodbopsrequestwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ops.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbopsrequests
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: elasticsearchopsrequestwebhook.validators.ops.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.ops.kubedb.com/v1alpha1/elasticsearchopsrequestwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ops.kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearchopsrequests
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: redisopsrequestwebhook.validators.ops.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.ops.kubedb.com/v1alpha1/redisopsrequestwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ops.kubedb.com
        apiVersions:
          - '*'
        resources:
          - redisopsrequests
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-provisioner
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: elasticsearchwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/elasticsearchwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - elasticsearches
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: postgreswebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/postgreswebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - postgreses
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mysqlwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/mysqlwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqls
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: perconaxtradbwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/perconaxtradbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - perconaxtradbs
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mongodbwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/mongodbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbs
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: rediswebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/rediswebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - redises
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: redissentinelwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/redissentinelwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - redissentinels
        operations:
          - CREATE
          - UPDATE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: memcachedwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/memcachedwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - memcacheds
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: etcdwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/etcdwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - etcds
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: pgbouncerwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/pgbouncerwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - pgbouncers
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: proxysqlwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/proxysqlwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - proxysqls
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: namespacewebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/namespacewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - '*'
        resources:
          - namespaces
        operations:
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Ignore
    sideEffects: None
  - name: mariadbwebhook.validators.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.kubedb.com/v1alpha1/mariadbwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - kubedb.com
        apiVersions:
          - '*'
        resources:
          - mariadbs
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.schema.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-schema-manager
    helm.sh/chart: kubedb-webhook-server-v0.3.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mysqldatabasewebhook.validators.schema.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.schema.kubedb.com/v1alpha1/mysqldatabasewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - schema.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mysqldatabases
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: mongodbdatabasewebhook.validators.schema.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.schema.kubedb.com/v1alpha1/mongodbdatabasewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - schema.kubedb.com
        apiVersions:
          - '*'
        resources:
          - mongodbdatabases
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
  - name: postgresdatabasewebhook.validators.schema.kubedb.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.schema.kubedb.com/v1alpha1/postgresdatabasewebhooks
      caBundle: dW5rbm93bg==
    rules:
      - apiGroups:
          - schema.kubedb.com
        apiVersions:
          - '*'
        resources:
          - postgresdatabases
        operations:
          - CREATE
          - UPDATE
          - DELETE
    admissionReviewVersions:
      - v1beta1
    failurePolicy: Fail
    sideEffects: None
